# libcommunism

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  LICENSE.md  README.md  _config.yml  buildopts.md  index.md
.github/workflows/: codeql-analysis.yml  docs_doxygen.yml
docs/doxygen/: AAPCS_8cpp.html  AAPCS_8cpp_source.html  AllocImpl_8h.html  AllocImpl_8h_source.html  Amd64_09SysV_8cpp.html  Amd64_09SysV_8cpp_source.html  Amd64_09Windows_8cpp.html  Amd64_09Windows_8cpp_source.html  Amd64_8cpp.html  Amd64_8cpp_source.html  Amd64_8h.html  Amd64_8h_source.html  Common_8cpp.html  Common_8cpp_source.html  Common_8h.html  Common_8h_source.html  CothreadImpl_8h.html  CothreadImpl_8h_source.html  CothreadPrivate_8h.html  CothreadPrivate_8h_source.html  Cothread_8cpp.html  Cothread_8cpp_source.html  Cothread_8h.html  Cothread_8h_source.html  SetJmp_8cpp.html  SetJmp_8cpp_source.html  SetJmp_8h.html  SetJmp_8h_source.html  SysV_8cpp.html  SysV_8cpp_source.html  UContext_8cpp.html  UContext_8cpp_source.html  UContext_8h.html  UContext_8h_source.html  Windows_8cpp.html  Windows_8cpp_source.html  aarch64_2Common_8cpp.html  aarch64_2Common_8cpp_source.html  aarch64_2Common_8h.html  aarch64_2Common_8h_source.html  (+72 more)
docs/doxygen/html/: CothreadPrivate_8h.html  Cothread_8cpp_source.html  namespacemembers_vars.html  structlibcommunism_1_1internal_1_1Amd64-members.html
docs/doxygen/html/search/: all_5.js  functions_2.js  functions_5.js  functions_6.js  variables_1.js
docs/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+14 more)
include/libcommunism/: Cothread.h
src/: AllocImpl.h  Cothread.cpp  CothreadImpl.h  CothreadPrivate.h
src/arch/: Amd64+SysV.cpp  Amd64+Windows.asm  Amd64+Windows.cpp  Amd64.cpp  Amd64.h
src/arch/aarch64/: AAPCS.S  AAPCS.cpp  Common.cpp  Common.h
src/arch/amd64/: Common.cpp  Common.h  SysV.S  SysV.cpp  Windows.asm  Windows.cpp
src/arch/arm/: Armhf.S  Armhf.cpp  Common.cpp  Common.h
src/arch/setjmp/: SetJmp.cpp  SetJmp.h
src/arch/ucontext/: UContext.cpp  UContext.h
src/arch/x86/: Common.cpp  Common.h  Fastcall.S  Fastcall.asm
test/: CMakeLists.txt
test/src/: basic.cpp  main.cpp  timing.cpp
